tentative fix for fail on corolis/dev